navbar jump fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 .hero {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content:center;
     height: 100vh;
     width: 100%;
     padding: 0;
@@ -41,6 +41,9 @@ body {
 .logo-nav {
     /* position: sticky; */
     /* top:-1px; */
+    position: fixed;
+    top: 0;
+    z-index: 1;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -48,10 +51,7 @@ body {
 }
 
 /* Sticky Nav Bar */
-.fixed-nav header{
-    position: fixed;
-    top: 0;
-    z-index: 1;
+.fixed-nav {
     background-color: #222629;
 }
 
@@ -78,7 +78,7 @@ body {
     margin: 0;
     display: flex;
     /* align-items: stretch;  */
-    justify-content: space-between;
+    /* justify-content: space-between; */
     
 }
 
@@ -101,6 +101,13 @@ body {
   font-family: Geneva, sans-serif;
   font-size: 6vh;
 } */
+
+.hero-center{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    height: 100%;
+}
     
 
 .hero-title {
